--- a/src/MoreAsyncLinq/MoreAsyncLinq.csproj
+++ b/src/MoreAsyncLinq/MoreAsyncLinq.csproj
@@ -3,9 +3,13 @@
   <PropertyGroup>
     <Authors>i3arnon</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>net461;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
     <Version>0.1.0</Version>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
