--- a/src/MoreAsyncLinq/MoreAsyncLinq.csproj
+++ b/src/MoreAsyncLinq/MoreAsyncLinq.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
