--- a/src/MoreAsyncLinq/MoreAsyncLinq.csproj
+++ b/src/MoreAsyncLinq/MoreAsyncLinq.csproj
@@ -15,7 +15,7 @@
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <TargetFrameworks>net461;netcoreapp3.1;netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
     <Version>0.2.0</Version>
   </PropertyGroup>
 
