--- a/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
+++ b/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
@@ -11,13 +11,13 @@
     <IncludeSymbols>true</IncludeSymbols>
     <PackageId>MoreAsyncLINQ</PackageId>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageReleaseNotes>Adds: Split, LeftJoin, SortedMerge, RightJoin</PackageReleaseNotes>
+    <PackageReleaseNotes>Adds: FillBackward, FillForward, Fold, PartialSort, PartialSortBy.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
-    <Version>0.5.0</Version>
+    <Version>0.6.0</Version>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
