--- a/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
+++ b/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
@@ -13,13 +13,17 @@
     <PackageId>MoreAsyncLINQ</PackageId>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageReleaseNotes>Removes: Append, Prepend.</PackageReleaseNotes>
+    <PackageReleaseNotes>Breaking changes:
+- Remove dependency on System.Linq.Async and replace with System.Linq.AsyncEnumerable.
+- PartitionAsync, PartitionAwaitAsync now use System.Linq.IGrouping instead of System.Linq.IAsyncGrouping.
+
+See more: https://learn.microsoft.com/en-us/dotnet/core/compatibility/core-libraries/10.0/asyncenumerable</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TargetFrameworks>net461;netstandard2.0;netstandard2.1</TargetFrameworks>
-    <Version>0.8.0</Version>
+    <Version>1.0.0-preview.1</Version>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
@@ -29,7 +33,7 @@
   <ItemGroup>
     <PackageReference Include="Nullable" Version="1.3.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+    <PackageReference Include="System.Linq.AsyncEnumerable" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
