--- a/tests/MoreAsyncLINQ.Tests/MoreAsyncLINQ.Tests.csproj
+++ b/tests/MoreAsyncLINQ.Tests/MoreAsyncLINQ.Tests.csproj
@@ -13,6 +13,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="PublicApiGenerator" Version="11.5.4" />
+    <PackageReference Include="Verify.DiffPlex" Version="3.1.0" />
+    <PackageReference Include="Verify.Xunit" Version="28.6.1" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
       <PrivateAssets>all</PrivateAssets>
