--- a/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
+++ b/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
@@ -17,13 +17,17 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageReleaseNotes>Modernize target frameworks:
 - Change net461 to net462
-- Add net8.0, net9.0 &amp; net10.0</PackageReleaseNotes>
+- Add net8.0, net9.0 &amp; net10.0
+
+Modernize API &amp; implementation:
+- Add overloads matching System.Linq.AsyncEnumerable API (i.e. async lambdas should have a `CancellationToken` parameter)
+- Remove ConfigureAwait(false) calls, matching System.Linq.AsyncEnumerable.</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TargetFrameworks>net462;netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks>
-    <Version>1.1.0</Version>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
