Modernize MaxBy, MinBy

--- a/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
+++ b/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
@@ -25,7 +25,7 @@ Modernize API &amp; implementation:
 
 Breaking Changes:
 - PartitionAsync now returns a `ValueTask&lt;(IEnumerable&lt;TSource&gt; True, IEnumerable&lt;TSource&gt; False)&gt;` instead of a `ValueTask&lt;(IAsyncEnumerable&lt;TSource&gt; True, IAsyncEnumerable&lt;TSource&gt; False)&gt;`
-- Hide CountBy, DistinctBy, Index, SkipLast, TakeLast &amp; ToDictionary since they're included in .NET</PackageReleaseNotes>
+- Hide CountBy, DistinctBy, Index, MaxBy, MinBy, SkipLast, TakeLast &amp; ToDictionary since they're included in .NET</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
