--- a/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
+++ b/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
@@ -25,13 +25,13 @@ Modernize API &amp; implementation:
 
 Breaking Changes:
 - PartitionAsync now returns a `ValueTask&lt;(IEnumerable&lt;TSource&gt; True, IEnumerable&lt;TSource&gt; False)&gt;` instead of a `ValueTask&lt;(IAsyncEnumerable&lt;TSource&gt; True, IAsyncEnumerable&lt;TSource&gt; False)&gt;`
-- Hide CountBy, DistinctBy, Index, MaxBy, MinBy, SkipLast, TakeLast &amp; ToDictionary since they're included in .NET</PackageReleaseNotes>
+- Hide CountBy, DistinctBy, Index, SkipLast, TakeLast &amp; ToDictionary since they're included in .NET</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TargetFrameworks>net462;netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks>
-    <Version>2.0.0-preview.1</Version>
+    <Version>2.0.0-preview.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
