--- a/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
+++ b/src/MoreAsyncLINQ/MoreAsyncLINQ.csproj
@@ -15,23 +15,14 @@
     <PackageId>MoreAsyncLINQ</PackageId>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <PackageReleaseNotes>Modernize target frameworks:
-- Change net461 to net462
-- Add net8.0, net9.0 &amp; net10.0
-
-Modernize API &amp; implementation:
-- Add overloads matching System.Linq.AsyncEnumerable API (i.e. async lambdas should have a `CancellationToken` parameter)
-- Remove ConfigureAwait(false) calls, matching System.Linq.AsyncEnumerable.
-
-Breaking Changes:
-- PartitionAsync now returns a `ValueTask&lt;(IEnumerable&lt;TSource&gt; True, IEnumerable&lt;TSource&gt; False)&gt;` instead of a `ValueTask&lt;(IAsyncEnumerable&lt;TSource&gt; True, IAsyncEnumerable&lt;TSource&gt; False)&gt;`
-- Hide CountBy, DistinctBy, Index, SkipLast, TakeLast &amp; ToDictionary since they're included in .NET</PackageReleaseNotes>
+    <PackageReleaseNotes>Operators:
+- GroupAdjacent</PackageReleaseNotes>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>linq;async</PackageTags>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TargetFrameworks>net462;netstandard2.0;net8.0;net9.0;net10.0</TargetFrameworks>
-    <Version>2.0.0</Version>
+    <Version>2.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
